--- a/src/app/employees/employees.component.html
+++ b/src/app/employees/employees.component.html
@@ -5,15 +5,4 @@
     <span class="badge">{{employee.id}}</span> {{employee.name}}
 </ul>
 </div>
-
-<div *ngIf="selectedEmployee" style="width: 50%; display: inline-block; vertical-align: top">
-
-  <h2>{{selectedEmployee.name | uppercase}} Details</h2>
-  <div><span>id: </span>{{selectedEmployee.id}}</div>
-  <div>
-    <label>name:
-      <input [(ngModel)]="selectedEmployee.name" placeholder="name">
-    </label>
-  </div>
-
-</div>
+<app-employee-detail [employee]="selectedEmployee"></app-employee-detail>
